Improve the human formatter

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/Angelmmiguel/svgi#readme",
   "dependencies": {
+    "ascii-tree": "^0.3.0",
+    "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
     "js-yaml": "^3.8.4",
