--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest --ci --coverage",
     "test:watch": "jest --watch",
-    "lint": "eslint ./"
+    "lint": "eslint ./lib"
   },
   "repository": {
     "type": "git",
