--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "An SVG inspector tool",
   "main": "index.js",
   "bin": {
-    "svgi": "./index.js"
+    "svgi": "./bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --ci --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint ./lib"
   },
   "repository": {
     "type": "git",
@@ -32,5 +34,10 @@
     "commander": "^2.9.0",
     "js-yaml": "^3.8.4",
     "xml2js": "^0.4.17"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-google": "^0.8.0",
+    "jest": "^20.0.4"
   }
 }
