--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cli-table": "^0.3.1",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "filesize": "^3.5.10",
     "js-yaml": "^3.8.4",
     "xml2js": "^0.4.17"
   },
