--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,5 +6,18 @@
   ],
   "imageSize": 100,
   "commit": true,
-  "contributors": []
+  "contributors": [
+    {
+      "login": "Angelmmiguel",
+      "name": "Ángel M",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/4056725?v=4",
+      "profile": "https://irb.rocks",
+      "contributions": [
+        "bug",
+        "code",
+        "design",
+        "doc"
+      ]
+    }
+  ]
 }
