--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
         "design",
         "doc"
       ]
+    },
+    {
+      "login": "aarongarciah",
+      "name": "Aarón García Hervás",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/7225802?v=4",
+      "profile": "https://aarongarciah.com",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
