Add @shindakun as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "shindakun",
+      "name": "Steve Layton",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/319128?v=4",
+      "profile": "https://shindakun.net/",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
