Add @JoshuaAF as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,6 +36,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "JoshuaAF",
+      "name": "Joshua Fuller",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/9168400?v=4",
+      "profile": "https://github.com/JoshuaAF",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
