--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -45,6 +45,16 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "elrumordelaluz",
+      "name": "Lionel",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/784056?v=4",
+      "profile": "https://elrumordelaluz.com",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ]
 }
