--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm run test:ci
+      - name: Install
+        run: npm install
+      - name: Run tests
+        run: npm run test:ci
