[#30] fix: apply alex suggestions and ensure woke runs against all code

--- a/.github/workflows/language.yml
+++ b/.github/workflows/language.yml
@@ -18,6 +18,7 @@ jobs:
           cache: "npm"
       - name: woke
         uses: get-woke/woke-action@v0
+        run: woke ./* ./**/*
         with:
           fail-on-error: true
       - name: Run AlexJS
