--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "xml2js": "^0.6.0"
   },
   "devDependencies": {
-    "c8": "^8.0.0",
+    "@vitest/coverage-v8": "^0.33.0",
     "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
     "vite": "^4.4.2",
